{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 673,
  "lineage": "b3870f47-e73e-6350-5900-b1eb2ab9615c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091534052864a125d",
            "association_id": "eipassoc-0f1478710686b8fce",
            "domain": "vpc",
            "id": "eipalloc-091534052864a125d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0530dd616d8c81e34",
            "private_dns": "ip-10-0-1-35.ap-south-1.compute.internal",
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-13-235-12-37.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.12.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip_1"
            },
            "tags_all": {
              "Name": "nat_ip_1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a577954fb804d7e",
            "association_id": "eipassoc-03df3b00098b549d0",
            "domain": "vpc",
            "id": "eipalloc-08a577954fb804d7e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07c1aa76bdbb814fc",
            "private_dns": "ip-10-0-2-152.ap-south-1.compute.internal",
            "private_ip": "10.0.2.152",
            "public_dns": "ec2-13-202-96-59.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.96.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip_2"
            },
            "tags_all": {
              "Name": "nat_ip_2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:internet-gateway/igw-01bb41ba87297cca6",
            "id": "igw-01bb41ba87297cca6",
            "owner_id": "786952869185",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:loadbalancer/app/application-tier-lb/62504028f5c09a23",
            "arn_suffix": "app/application-tier-lb/62504028f5c09a23",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-application-tier-lb-329079055.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:loadbalancer/app/application-tier-lb/62504028f5c09a23",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-tier-lb",
            "security_groups": [
              "sg-0a038effd360283d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c5a1dd7a4c8cc35"
              },
              {
                "subnet_id": "subnet-0a5e3f18e5eae967e"
              }
            ],
            "subnets": [
              "subnet-01c5a1dd7a4c8cc35",
              "subnet-0a5e3f18e5eae967e"
            ],
            "vpc_id": "vpc-0384204fc000b9b5d",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:loadbalancer/app/front-end-lb/8690dcce44daf370",
            "arn_suffix": "app/front-end-lb/8690dcce44daf370",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-end-lb-1158622124.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:loadbalancer/app/front-end-lb/8690dcce44daf370",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-end-lb",
            "security_groups": [
              "sg-009d19fc4a036ce2c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d82d13e0a0f6926"
              },
              {
                "subnet_id": "subnet-0534efea9d23a684b"
              }
            ],
            "subnets": [
              "subnet-01d82d13e0a0f6926",
              "subnet-0534efea9d23a684b"
            ],
            "vpc_id": "vpc-0384204fc000b9b5d",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_presentation_tier",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:listener/app/application-tier-lb/62504028f5c09a23/c5bf6ed9bb574752",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:targetgroup/application-tier-lb-tg/c411ac729bdc55a7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:listener/app/application-tier-lb/62504028f5c09a23/c5bf6ed9bb574752",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:loadbalancer/app/application-tier-lb/62504028f5c09a23",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_tier",
            "aws_lb_target_group.application_tier",
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:listener/app/front-end-lb/8690dcce44daf370/62970768a70127d4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:targetgroup/front-end-lb-tg/89ec96922c454953",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:listener/app/front-end-lb/8690dcce44daf370/62970768a70127d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:loadbalancer/app/front-end-lb/8690dcce44daf370",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.alb_presentation_tier",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:targetgroup/application-tier-lb-tg/c411ac729bdc55a7",
            "arn_suffix": "targetgroup/application-tier-lb-tg/c411ac729bdc55a7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:targetgroup/application-tier-lb-tg/c411ac729bdc55a7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "application-tier-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:targetgroup/front-end-lb-tg/89ec96922c454953",
            "arn_suffix": "targetgroup/front-end-lb-tg/89ec96922c454953",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:786952869185:targetgroup/front-end-lb-tg/89ec96922c454953",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "front-end-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091534052864a125d",
            "connectivity_type": "public",
            "id": "nat-057b2a72d53ae9621",
            "network_interface_id": "eni-0530dd616d8c81e34",
            "private_ip": "10.0.1.35",
            "public_ip": "13.235.12.37",
            "subnet_id": "subnet-0534efea9d23a684b",
            "tags": {
              "Name": "nat_gw_1"
            },
            "tags_all": {
              "Name": "nat_gw_1"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a577954fb804d7e",
            "connectivity_type": "public",
            "id": "nat-0e6010d0c98474ff2",
            "network_interface_id": "eni-07c1aa76bdbb814fc",
            "private_ip": "10.0.2.152",
            "public_ip": "13.202.96.59",
            "subnet_id": "subnet-01d82d13e0a0f6926",
            "tags": {
              "Name": "nat_gw_2"
            },
            "tags_all": {
              "Name": "nat_gw_2"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:route-table/rtb-0bfe780f90474fbc9",
            "id": "rtb-0bfe780f90474fbc9",
            "owner_id": "786952869185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057b2a72d53ae9621",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_1"
            },
            "tags_all": {
              "Name": "private_route_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:route-table/rtb-04a6770c6388f1325",
            "id": "rtb-04a6770c6388f1325",
            "owner_id": "786952869185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e6010d0c98474ff2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_2"
            },
            "tags_all": {
              "Name": "private_route_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:route-table/rtb-0d28055191bbdfc14",
            "id": "rtb-0d28055191bbdfc14",
            "owner_id": "786952869185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bb41ba87297cca6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1ec4bc8510f3471",
            "route_table_id": "rtb-0bfe780f90474fbc9",
            "subnet_id": "subnet-0a5e3f18e5eae967e"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0508a231b17fef40f",
            "route_table_id": "rtb-04a6770c6388f1325",
            "subnet_id": "subnet-01c5a1dd7a4c8cc35"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4941dfd35e38535",
            "route_table_id": "rtb-0d28055191bbdfc14",
            "subnet_id": "subnet-0534efea9d23a684b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc2ebd214ff5eed",
            "route_table_id": "rtb-0d28055191bbdfc14",
            "subnet_id": "subnet-01d82d13e0a0f6926"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:security-group/sg-0a038effd360283d0",
            "description": "Allow HTTP requests",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a038effd360283d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b220de44435ce363"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b220de44435ce363"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_application_tier_connection",
            "name_prefix": "",
            "owner_id": "786952869185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_application_tier_sg"
            },
            "tags_all": {
              "Name": "alb_application_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_presentation_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:security-group/sg-009d19fc4a036ce2c",
            "description": "Allow HTTP requests",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009d19fc4a036ce2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_presentation_tier_connection",
            "name_prefix": "",
            "owner_id": "786952869185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_presentation_tier_sg"
            },
            "tags_all": {
              "Name": "alb_presentation_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:security-group/sg-04a61a44883891c95",
            "description": "Allow HTTP requests",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a61a44883891c95",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from public subnet",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a038effd360283d0"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from public subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a038effd360283d0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application_tier_connection",
            "name_prefix": "",
            "owner_id": "786952869185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application_tier_sg"
            },
            "tags_all": {
              "Name": "application_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_application_tier",
            "aws_security_group.alb_presentation_tier",
            "aws_security_group.presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "presentation_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:security-group/sg-0b220de44435ce363",
            "description": "Allow HTTP requests",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b220de44435ce363",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009d19fc4a036ce2c"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009d19fc4a036ce2c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "presentation_tier_connection",
            "name_prefix": "",
            "owner_id": "786952869185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "presentation_tier_sg"
            },
            "tags_all": {
              "Name": "presentation_tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_presentation_tier",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:subnet/subnet-0a5e3f18e5eae967e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5e3f18e5eae967e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786952869185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:subnet/subnet-01c5a1dd7a4c8cc35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c5a1dd7a4c8cc35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786952869185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:subnet/subnet-0534efea9d23a684b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0534efea9d23a684b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "786952869185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:subnet/subnet-01d82d13e0a0f6926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d82d13e0a0f6926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "786952869185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0384204fc000b9b5d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:786952869185:vpc/vpc-0384204fc000b9b5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a063195f37b3a88",
            "default_route_table_id": "rtb-0c3126cc6c8e31fe3",
            "default_security_group_id": "sg-04fa995586b54c39a",
            "dhcp_options_id": "dopt-09383d81081cbda95",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0384204fc000b9b5d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3126cc6c8e31fe3",
            "owner_id": "786952869185",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}